Added option to SimpleJobScheduler to allow lifo scheduling.
Removed HsmStorageHandler2 parameter of sweeper constructor. It wasn't 
used and it prevented the sweeper from being reused in the new pool.